Removed a dependency on a Sun API and removed a possible problem with simultaneous transactions.